# TH-DaedraHeart-WIsebase

./: CMakeLists.txt  CMakeSettings.json  README.md  blog.xml
BackendServer/: main.cpp
BackendServer/BackendLogic/: BackendLogic.cpp  BackendLogic.hpp
BackendServer/CommandCreator/: CommandCreator.cpp  CommandCreator.hpp
BackendServer/CommandHandler/: CommandHandler.cpp  CommandHandler.hpp
BackendServer/Commands/: AddComment.cpp  AddComment.hpp  AddPost.cpp  AddPost.hpp  AddUser.cpp  AddUser.hpp  BaseCommand.hpp  DeleteComment.cpp  DeleteComment.hpp  DeletePost.cpp  DeletePost.hpp  DeleteUser.cpp  DeleteUser.hpp  GetPost.cpp  GetPost.hpp  GetTopPosts.cpp  GetTopPosts.hpp  GetUser.cpp  GetUser.hpp  GetUserPosts.cpp  GetUserPosts.hpp  UpdatePostRating.cpp  UpdatePostRating.hpp
BackendServer/Controller/: Controller.cpp  Controller.hpp
BackendServer/Database/: Data.hpp  DataBaseConnection.cpp  DataBaseConnection.hpp
BackendServer/Managers/: BaseManager.hpp  CommentManager.cpp  CommentManager.hpp  PostManager.cpp  PostManager.hpp  UserManager.cpp  UserManager.hpp
WiseBase/: BaseFileReader.h  CMakeLists.txt  mainWindow.cpp
WiseBase/include/: BaseFileReader.h  Note.h  PageEdit.h  PageMetrics.h  PageTextEdit.h  Picture.h  TableHeader.h  TableView.h  User.h  UserColumn.h
WiseBase/src/: BaseFileReader.cpp  Note.cpp  PageEdit.cpp  PageMetrics.cpp  PageTextEdit.cpp  Picture.cpp  TableHeader.cpp  TableView.cpp  User.cpp  UserColumn.cpp
css/: blogexample.css
docs/: api.html  api.odt  uml.drawio
src/: Blog.cpp  BlogRSSFeed.cpp  BlogRSSFeed.h  BlogSession.cpp  BlogSession.h  BlogView.cpp  BlogView.h  main.cpp
src/0/: WServer.cpp  WServer.h
src/Connection/: connection.cpp  connection.h
src/MainLogic/Handlers/inc/: base_handler.h  database_handler.h  page_handler.h  theme_handler.h  user_handler.h
src/MainLogic/Handlers/src/: database_handler.cpp  page_handler.cpp  theme_handler.cpp  user_handler.cpp
src/MainLogic/Request/: request.cpp  request.h
src/MainLogic/Response/: response.cpp  response.h
src/MainLogic/Router/: router.cpp  router.h
src/Server/: server.cpp  server.h
src/asciidoc/: asciidoc.cpp
src/auth/: BlogLoginWidget.cpp  BlogLoginWidget.h  BlogUserDatabase.cpp  BlogUserDatabase.h  Token.cpp  Token.h
src/entity/: Comment.cpp  Comment.h  CommentView.cpp  CommentView.h  EditUsers.cpp  EditUsers.h  Post.cpp  Post.h  PostView.cpp  PostView.h  Tag.cpp  Tag.h  User.cpp  User.h
utils/: comments.json  create_data.py  interaction.py  posts.json  social_network.sql  users.json
